fixed awkward table size on mobile

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -286,6 +286,7 @@ table tbody td {
     padding-top: 8px;
     padding-bottom: 4px;
     border-bottom: 1px solid #888;
+    word-wrap: break-word;
 }
 
 /* Adjust sizes for mobile */
@@ -298,5 +299,28 @@ table tbody td {
     }
     h3 {
         font-size: 1.2em;
+    }
+
+    table thead {
+        display: none;
+    }
+
+    table tbody tr {
+        display: flex;
+        flex-direction: column;
+        border-bottom: 1px solid #888;
+        padding-bottom: 10px;
+    }
+
+    table tbody td {
+        display: flex;
+        justify-content: space-between;
+        padding: 8px 0;
+    }
+
+    table tbody td::before {
+        content: attr(data-label);
+        font-weight: bold;
+        padding-right: 10px;
     }
 }
